--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,10 @@ edition = "2024"
 anyhow = "1.0.100"
 chrono = "0.4.42"
 gpui = "0.2.1"
-gpui-component = { git = "https://github.com/longbridge/gpui-component"}
+# gpui-component = { git = "https://github.com/longbridge/gpui-component"}
+gpui-component = { path = "../gpui-component/crates/ui" }
 rust-embed = "8.7.2"
 serde = "1.0.228"
 serde_json = "1.0.145"
+unicode-segmentation = "1.12.0"
 uuid = { version = "1.18.1", features = ["v7"] }
