--- a/crates/gpui/Cargo.toml
+++ b/crates/gpui/Cargo.toml
@@ -7,7 +7,8 @@ edition.workspace = true
 anyhow = "1.0.100"
 chrono = "0.4.42"
 gpui = "0.2.1"
-gpui-component = "0.3.1"
+gpui-component = { version = "0.3.1", features = ["webview"] }
+gpui-router = "0.2.6"
 rust-embed = "8.7.2"
 serde = "1.0.228"
 serde_json = "1.0.145"
