--- a/crates/gpui/Cargo.toml
+++ b/crates/gpui/Cargo.toml
@@ -8,11 +8,14 @@ anyhow = "1.0.100"
 chrono = "0.4.42"
 dirs = "6.0.0"
 gpui = "0.2.2"
-gpui-component = { version = "0.4.2", features = ["webview"] }
+gpui-component = { version = "0.5.0-preview2", features = ["webview"] }
+gpui-nav = "0.1.1"
 gpui-router = "0.2.6"
 rust-embed = "8.7.2"
 serde = "1.0.228"
 serde_json = "1.0.145"
+smol = "2.0.2"
+sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "derive", "migrate", "uuid", "chrono", "json"] }
 tokio = { version = "1.48", features = ["full"] }
 unicode-segmentation = "1.12.0"
 uuid = { version = "1.18.1", features = ["v7"] }
